# odsfkfskf

./: .gitignore  AI_HANDOFF_PROMPT_v2.md  AI_HANDOFF_SUMMARY.md  GRANDMASTER_V8_submission.csv  GRAND_ENSEMBLE_HackUDC_submission.csv  GRAND_ENSEMBLE_yolo+v3+old.csv  HACKUDC_DIAMOND_SUBMISSION.csv  LICENSE  NUCLEAR_V9_submission.csv  README.md  ULTIMATE_ENSEMBLE_V8+V3+OLD.csv  ensemble_all3_submission.csv  ensemble_v3+old_submission.csv  ensemble_v3+v2_submission.csv  ensemble_v3k200+old_submission.csv  ensemble_v3k200+v3+old_submission.csv  main.py  metric_submission.csv  pyproject.toml  requirements.txt  runpod_setup.sh  smart_submission_all_signals.csv  smart_submission_url_only.csv  smart_v3_k200_submission.csv  smart_v3_submission.csv  submission_fashionclip.csv  submission_fashionclip_finetuned.csv  submission_metric.csv  submission_owlvit.csv  submission_owlvit_filtrado.csv  test_owlvit.py
backend/: main.py
frontend/: index.html
notebooks/: 01_data_downloader.ipynb  02_offline_catalog.ipynb  03_yolo_cropping.ipynb  04_inference_submission.ipynb  2_Inferencia_Test.ipynb  download_bundles.py  download_products.py  embedings_regenerate.ipynb  etiquetar.ipynb  submission_inditex.csv  train.ipynb
src/: auto_annotate_yolo.py  build_clip_index.py  build_index.py  build_openclip_index.py  bundle_predictions_completed.csv  bundle_predictions_faiss.csv  clip_inference.py  compare_csvs.py  constants.py  dataset.py  download_missing_products.py  download_yolo.py  download_yolo_weights.py  embeddings.py  embedings.py  ensemble.py  extract_characteristics.py  faiss_calc.py  (+28 more)
(+29 files in other folders)
