[project]
name = "hackudc-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "matplotlib>=3.10.8",
    "open-clip-torch>=3.3.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.18",
]
